# strava-dataviz

./: .gitignore  README.md  hello.py  pyproject.toml  rest_api_pipeline.py
.dlt/: secrets.toml
.github/: PULL_REQUEST_TEMPLATE.md
pipelines/: rest_api_pipeline.py
pipelines/.dlt/: config.toml  secrets.toml
